--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "gatsby": "^1.9.255",
     "gatsby-image": "^1.0.48",
     "gatsby-link": "^1.6.37",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.34",
     "gatsby-transformer-remark": "^1.7.40",
     "gatsby-transformer-sharp": "^1.6.23",
+    "netlify-cms": "^1.7.0",
     "react-helmet": "^5.2.0",
     "sharp": "^0.20.2",
     "styled-components": "^3.2.6"
